--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"sass": "^1.58.3",
 		"sass-loader": "^13.2.0",
 		"vue": "^3.2.13",
-		"vue-router": "^4.1.6"
+		"vue-router": "^4.1.6",
+		"vue-uuid": "^3.0.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.16",
